# DEAL

./: .gitignore  LICENSE  README.md  TODO  pyproject.toml
.github/workflows/: ci.yml
configs/: README.md
configs/deal/: README.md  deal-nodft.yaml
configs/flare/: dft_calc-qe.yaml  flare_calc-init.yaml
configs/lammps/: in.lammps
configs/mace/: mace_uncertainty.py
deal/: __init__.py  cli.py  core.py  deal.py  fake.py  input.py  offline_deal.py  otf.py  utils.py
deal/configs/: default.yaml  submit-deal.slurm
example/: input.yaml
examples/: .gitignore  README.md  example_input.yaml
examples-results/N2/: README.md  input.yaml
examples-results/formate/: README.md
examples/1_activelearning_N2/: README.md  active-learning-N2.ipynb
examples/2_subsampling_formate/: README.md  formate-subsampling.ipynb  input.yaml
examples/3_preselection/: .gitignore  README.md
examples/N2/: README.md  example-N2.ipynb
examples/formate/: 2-input.yaml  README.md  analyse_results.ipynb  input.yaml
mlputils/: __init__.py  deal.py  palette.py  utils.py
notebooks/: README.md
notebooks/0_preliminary/: flare-md.ipynb
notebooks/1_exploration/: flare-flooding.ipynb
notebooks/2_convergence/: create-lammps-inputs.ipynb  deal-active-learning-paper.ipynb  deal-active-learning.ipynb  deal-nhx.ipynb  submit-deal.sh
npj_supporting_data/: README.md
npj_supporting_data/mlputils/: __init__.py  build.py  filter.py  lammps.py
tests/: COLVAR  input.yaml  run_all.sh
tests/cli/: run.sh
tests/data/: traj.xyz
tests/python/: run.sh  run_deal.py
tutorial/: DEAL.ipynb
(+142 files in other folders)
